--- a/KnowItAll/CreateNewPost.storyboard
+++ b/KnowItAll/CreateNewPost.storyboard
@@ -246,7 +246,7 @@
                                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rxk-VW-sIX" customClass="CosmosView" customModule="Cosmos">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rxk-VW-sIX" customClass="CosmosView" customModule="Cosmos">
                                         <rect key="frame" x="179" y="131" width="120" height="30"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
