--- a/KnowItAll/Search.storyboard
+++ b/KnowItAll/Search.storyboard
@@ -154,61 +154,45 @@
                                             <outlet property="starRating" destination="35O-2K-ZFR" id="KlJ-hJ-Tl7"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TopicPollCell" rowHeight="100" id="WX0-dq-cVX" customClass="TopicPollCell" customModule="KnowItAll" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TopicPollCell" rowHeight="100" id="spP-ut-qoi" customClass="TopicPollCell" customModule="KnowItAll" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="138" width="375" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="WX0-dq-cVX" id="M9Q-4q-eB4">
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="spP-ut-qoi" id="VcO-LZ-Tw9">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="30 Reviews" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SAe-1r-C7D">
-                                                    <rect key="frame" x="280" y="69" width="87" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="30 Votes" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bFF-1g-sLc">
+                                                    <rect key="frame" x="299.5" y="69" width="67.5" height="21"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="21" id="SDM-36-yE7"/>
+                                                        <constraint firstAttribute="height" constant="21" id="vhP-mW-fwO"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1dP-bc-Qfw" customClass="CosmosView" customModule="Cosmos">
-                                                    <rect key="frame" x="8" y="69" width="120" height="20"/>
-                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="20" id="kYH-Pk-nhl"/>
-                                                    </constraints>
-                                                </view>
-                                                <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="plP-5U-6dl">
+                                                <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aaW-Lu-xve">
                                                     <rect key="frame" x="0.0" y="89" width="375" height="1"/>
                                                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="1" id="lRc-qB-a4j"/>
-                                                    </constraints>
                                                 </view>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v7n-FE-blb">
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BLc-mS-Ysy">
                                                     <rect key="frame" x="0.0" y="89" width="375" height="10"/>
                                                     <color key="backgroundColor" red="0.86274509799999999" green="0.86274509799999999" blue="0.86274509799999999" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="10" id="7nh-06-4fh"/>
-                                                    </constraints>
                                                 </view>
-                                                <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bZD-yc-Dti">
+                                                <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Cs-6I-wuH">
                                                     <rect key="frame" x="0.0" y="99" width="375" height="1"/>
                                                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="1" id="Mew-Xg-eLi"/>
-                                                    </constraints>
                                                 </view>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Entertainment" translatesAutoresizingMaskIntoConstraints="NO" id="nTp-m1-WGL">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Entertainment" translatesAutoresizingMaskIntoConstraints="NO" id="79Z-JF-tCT">
                                                     <rect key="frame" x="317" y="8" width="50" height="50"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="50" id="6gB-bd-mCr"/>
-                                                        <constraint firstAttribute="height" constant="50" id="DxL-AI-kjQ"/>
+                                                        <constraint firstAttribute="width" constant="50" id="kqi-ek-x4R"/>
+                                                        <constraint firstAttribute="height" constant="50" id="rLV-Z1-aht"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Star Wars" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="thu-0f-Qws">
-                                                    <rect key="frame" x="8" y="8" width="301" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Star Wars" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="IVg-uI-dnp">
+                                                    <rect key="frame" x="8" y="8" width="102" height="21"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="21" id="mSr-Oo-JPE"/>
+                                                        <constraint firstAttribute="height" constant="21" id="8Yf-ty-f53"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="25"/>
                                                     <nil key="textColor"/>
@@ -216,27 +200,32 @@
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="plP-5U-6dl" secondAttribute="trailing" id="1uZ-Wu-zrh"/>
-                                                <constraint firstItem="plP-5U-6dl" firstAttribute="top" secondItem="1dP-bc-Qfw" secondAttribute="bottom" id="2Sk-Rj-hMD"/>
-                                                <constraint firstItem="v7n-FE-blb" firstAttribute="leading" secondItem="M9Q-4q-eB4" secondAttribute="leading" id="3ct-Rr-doR"/>
-                                                <constraint firstItem="SAe-1r-C7D" firstAttribute="top" secondItem="nTp-m1-WGL" secondAttribute="bottom" constant="11" id="6sz-pd-0mT"/>
-                                                <constraint firstItem="plP-5U-6dl" firstAttribute="leading" secondItem="M9Q-4q-eB4" secondAttribute="leading" id="7at-cC-xkC"/>
-                                                <constraint firstAttribute="trailing" secondItem="bZD-yc-Dti" secondAttribute="trailing" id="84T-bn-Jxx"/>
-                                                <constraint firstItem="1dP-bc-Qfw" firstAttribute="leading" secondItem="M9Q-4q-eB4" secondAttribute="leadingMargin" id="89T-xM-Npy"/>
-                                                <constraint firstItem="nTp-m1-WGL" firstAttribute="top" secondItem="M9Q-4q-eB4" secondAttribute="topMargin" id="8xa-wR-kVr"/>
-                                                <constraint firstItem="thu-0f-Qws" firstAttribute="leading" secondItem="M9Q-4q-eB4" secondAttribute="leadingMargin" id="EAS-vN-7Qb"/>
-                                                <constraint firstItem="plP-5U-6dl" firstAttribute="top" secondItem="1dP-bc-Qfw" secondAttribute="bottom" id="IZc-CA-n5P"/>
-                                                <constraint firstItem="thu-0f-Qws" firstAttribute="top" secondItem="M9Q-4q-eB4" secondAttribute="topMargin" id="Jas-D8-ap5"/>
-                                                <constraint firstItem="bZD-yc-Dti" firstAttribute="top" secondItem="SAe-1r-C7D" secondAttribute="bottom" constant="9" id="Qjm-Gw-ZQ3"/>
-                                                <constraint firstItem="v7n-FE-blb" firstAttribute="top" secondItem="1dP-bc-Qfw" secondAttribute="bottom" id="Sai-ps-GGI"/>
-                                                <constraint firstItem="1dP-bc-Qfw" firstAttribute="top" secondItem="thu-0f-Qws" secondAttribute="bottom" constant="40" id="Tgo-dv-8JI"/>
-                                                <constraint firstItem="nTp-m1-WGL" firstAttribute="trailing" secondItem="M9Q-4q-eB4" secondAttribute="trailingMargin" id="aX8-qf-NaW"/>
-                                                <constraint firstItem="SAe-1r-C7D" firstAttribute="trailing" secondItem="M9Q-4q-eB4" secondAttribute="trailingMargin" id="hTZ-x7-MTN"/>
-                                                <constraint firstItem="SAe-1r-C7D" firstAttribute="top" secondItem="nTp-m1-WGL" secondAttribute="bottom" constant="11" id="nwe-kf-hnD"/>
-                                                <constraint firstAttribute="trailing" secondItem="v7n-FE-blb" secondAttribute="trailing" id="wGw-03-Oc4"/>
-                                                <constraint firstItem="bZD-yc-Dti" firstAttribute="leading" secondItem="M9Q-4q-eB4" secondAttribute="leading" id="ymB-5t-81t"/>
+                                                <constraint firstItem="bFF-1g-sLc" firstAttribute="top" secondItem="IVg-uI-dnp" secondAttribute="bottom" constant="40" id="0nz-Bf-Sxh"/>
+                                                <constraint firstAttribute="bottom" secondItem="2Cs-6I-wuH" secondAttribute="bottom" id="3af-q3-sPc"/>
+                                                <constraint firstItem="2Cs-6I-wuH" firstAttribute="top" secondItem="bFF-1g-sLc" secondAttribute="bottom" constant="9" id="5N9-nm-j7H"/>
+                                                <constraint firstItem="BLc-mS-Ysy" firstAttribute="leading" secondItem="2Cs-6I-wuH" secondAttribute="leading" id="93d-A4-9t0"/>
+                                                <constraint firstItem="BLc-mS-Ysy" firstAttribute="leading" secondItem="aaW-Lu-xve" secondAttribute="leading" id="D7W-4P-tGI"/>
+                                                <constraint firstItem="aaW-Lu-xve" firstAttribute="top" secondItem="BLc-mS-Ysy" secondAttribute="top" id="HKa-rQ-BZc"/>
+                                                <constraint firstItem="bFF-1g-sLc" firstAttribute="trailing" secondItem="VcO-LZ-Tw9" secondAttribute="trailingMargin" id="HdA-Xx-alT"/>
+                                                <constraint firstAttribute="trailing" secondItem="BLc-mS-Ysy" secondAttribute="trailing" id="JJ9-VC-eBm"/>
+                                                <constraint firstItem="2Cs-6I-wuH" firstAttribute="top" secondItem="aaW-Lu-xve" secondAttribute="bottom" constant="9" id="KfI-hO-gwp"/>
+                                                <constraint firstItem="IVg-uI-dnp" firstAttribute="top" secondItem="VcO-LZ-Tw9" secondAttribute="topMargin" id="Qvs-4l-Q5S"/>
+                                                <constraint firstItem="2Cs-6I-wuH" firstAttribute="top" secondItem="BLc-mS-Ysy" secondAttribute="bottom" id="VIy-Kg-Xtq"/>
+                                                <constraint firstItem="IVg-uI-dnp" firstAttribute="leading" secondItem="VcO-LZ-Tw9" secondAttribute="leadingMargin" id="Yfx-Ou-dAf"/>
+                                                <constraint firstItem="79Z-JF-tCT" firstAttribute="trailing" secondItem="VcO-LZ-Tw9" secondAttribute="trailingMargin" id="dEg-kq-R7l"/>
+                                                <constraint firstItem="aaW-Lu-xve" firstAttribute="trailing" secondItem="2Cs-6I-wuH" secondAttribute="trailing" id="fcM-Jl-uYZ"/>
+                                                <constraint firstItem="79Z-JF-tCT" firstAttribute="top" secondItem="VcO-LZ-Tw9" secondAttribute="topMargin" id="jXV-Qq-yNz"/>
+                                                <constraint firstItem="BLc-mS-Ysy" firstAttribute="trailing" secondItem="aaW-Lu-xve" secondAttribute="trailing" id="k2h-Qe-Au0"/>
+                                                <constraint firstItem="2Cs-6I-wuH" firstAttribute="top" secondItem="VcO-LZ-Tw9" secondAttribute="top" constant="99" id="nuT-uj-NBL"/>
+                                                <constraint firstItem="BLc-mS-Ysy" firstAttribute="top" secondItem="VcO-LZ-Tw9" secondAttribute="top" constant="89" id="pt1-ua-bjZ"/>
+                                                <constraint firstItem="BLc-mS-Ysy" firstAttribute="leading" secondItem="VcO-LZ-Tw9" secondAttribute="leading" id="yEk-dJ-DrQ"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="numVotesLabel" destination="bFF-1g-sLc" id="R8m-O0-GAB"/>
+                                            <outlet property="pollCategoryImage" destination="79Z-JF-tCT" id="iE5-UM-CYn"/>
+                                            <outlet property="pollName" destination="IVg-uI-dnp" id="Pfu-sC-Y7A"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
